[gd_scene load_steps=12 format=3 uid="uid://byp5mh2htwreg"]

[ext_resource type="Script" path="res://cenario.gd" id="1_eh8ad"]
[ext_resource type="PackedScene" uid="uid://b0pvf2lrxkgqs" path="res://fundo.tscn" id="2_74848"]
[ext_resource type="Texture2D" uid="uid://bpshvy8je7q6a" path="res://Assets/Remake/Floor_01.png" id="3_i4lib"]
[ext_resource type="Texture2D" uid="uid://bycnrll5p3ki3" path="res://Assets/Remake/Pillar_01.png" id="4_38ktd"]
[ext_resource type="Texture2D" uid="uid://x1ig1mik87lk" path="res://Assets/Remake/Pillar_02.png" id="5_upyr7"]
[ext_resource type="Texture2D" uid="uid://nppy6a6wwmb4" path="res://Assets/Remake/Pillar_03.png" id="6_vfcu3"]
[ext_resource type="Texture2D" uid="uid://bdh30ix82no2l" path="res://Assets/Remake/Pillar_04.png" id="7_wim5d"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hot0i"]
atlas = ExtResource("3_i4lib")

[sub_resource type="SpriteFrames" id="SpriteFrames_6kb4i"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_38ktd")
}],
"loop": true,
"name": &"Q1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_upyr7")
}],
"loop": true,
"name": &"Q2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_vfcu3")
}],
"loop": true,
"name": &"Q3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_wim5d")
}],
"loop": true,
"name": &"Q4",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xk2ra"]
size = Vector2(40.75, 58.5)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_tt2h7"]

[node name="Cenario" type="Node2D"]
script = ExtResource("1_eh8ad")

[node name="Fundo" parent="." instance=ExtResource("2_74848")]

[node name="Background4" type="TextureRect" parent="Fundo"]
z_index = 1
offset_top = 150.0
offset_right = 240.0
offset_bottom = 160.0
texture = SubResource("AtlasTexture_hot0i")

[node name="Alcance" type="RayCast2D" parent="."]
position = Vector2(217, 128)
target_position = Vector2(-19, 6)

[node name="GeraBolha" type="Timer" parent="."]
autostart = true

[node name="Barragem" type="AnimatedSprite2D" parent="."]
z_index = 1
position = Vector2(219, 84)
scale = Vector2(1, 1.04)
sprite_frames = SubResource("SpriteFrames_6kb4i")
animation = &"Q4"
autoplay = "Q1"

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(447, 17)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-225.25, 102)
shape = SubResource("RectangleShape2D_xk2ra")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(447, 17)
physics_material_override = SubResource("PhysicsMaterial_tt2h7")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-226.625, 106)
shape = SubResource("RectangleShape2D_xk2ra")

[connection signal="timeout" from="GeraBolha" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
